--- a/index.html
+++ b/index.html
@@ -29,12 +29,21 @@
 		<button onclick="login()">Login</button>
 
 		<script>
+			
 			function login() {
 				var sc_customer = getUrlVars()["sc_customer"];
 				WebEmarsysSdk.login({
 					fieldId: 3,
 					fieldValue: sc_customer
 				})
+			}
+			
+			function getUrlVars() {
+				var vars = {};
+				var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+				vars[key] = value;
+				});
+				return vars;
 			}
 
 			function generalSubscribe() {
