--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
 			
 			function login() {
 				var sc_customer = getUrlVars()["sc_customer"];
-				WebEmarsysSdk.login({
-					fieldId: 3,
-					fieldValue: sc_customer
-				})
+				if sc_customer != null {
+					WebEmarsysSdk.login({
+						fieldId: 3,
+						fieldValue: sc_customer
+					})
+				}
 			}
 			
 			function getUrlVars() {
