--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 
 <html>
   <head>
+    <script type="text/javascript" src="https://assets.emarsys.net/web-emarsys-sdk/3.1.2/web-emarsys-sdk.js" async></script>
+<script type="text/javascript">
+var WebEmarsysSdk = WebEmarsysSdk || []
+      WebEmarsysSdk.push(['init', {
+        applicationCode: 'EMS9E-F995A', // your Domain code obtained above
+        defaultNotificationTitle: 'Your Default Title', // sets your default title for push notifications
+        defaultNotificationIcon: 'https://yoursite.com/img/your-logo.png', // URL to your notification icon
+        autoSubscribe: false, // If true, prompts a user to subscribe for pushes upon SDK initialization which is not recommended
+        serviceWorker: {
+          url: 'sw.js',
+          applicationServerPublicKey: 'BBR9_y7sJXX29nouTmykOXgJIXADeWnERTbJ7WiwZkfrz2QCohrk_BtKVp09rcZIxZgnHN0D5GVcQFf04SGEPx4'
+        }
+      }])
+</script>
   </head>
   <body>
     <button onclick="subscribe()">Subscribe</button>
